--- a/package.json
+++ b/package.json
@@ -3,22 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "d3": "^5.15.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "d3": "5.15.1",
+    "eslint-config-airbnb": "18.1.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-rangeslider": "2.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "airbnb",
+      "airbnb/hooks"
+    ]
   },
   "browserslist": {
     "production": [
