style: added prettier

--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "airbnb",
-      "airbnb/hooks"
+      "react-app"
     ]
   },
   "browserslist": {
